@@ -2034,3 +2034,6 @@ Added photon map support to rad.  Fixed some double-counting
 issues in photon-mapping spotted by David Geisler-Moroder.
 
 Added photon map support to trad.
+
+Fixed bug in antimatter source testing when antimatter
+definition follows potential obstructor in input.
